Additional post-dark mode style fixes

--- a/src/components/homepage.scss
+++ b/src/components/homepage.scss
@@ -2,6 +2,8 @@
 
 .spotlight {
 
+	font-weight: 400;
+
 	.main_container {
 		position: relative;
 		// width: 100vw;
@@ -145,7 +147,7 @@
 		margin: 0 auto;
 	}
 	div {
-		font-weight: 300;
+		font-weight: 400;
 		font-size: 14px;
 		color: #000;
 
@@ -264,6 +266,7 @@
 		line-height: 150%;
 		font-weight: 300;
 		font-size: 16px;
+		font-weight: 400;
 		text-align: center;
 
 		&.copyright {
