--- a/src/components/my-widgets-export.scss
+++ b/src/components/my-widgets-export.scss
@@ -22,14 +22,17 @@
 			}
 
 			.semester-btn {
-				color: white;
-				font-size: 0.9em;
 				min-width: 75px;
-				text-align: center;
-				background-color: #f1824c;
 				padding: 10px;
 				margin-left: auto;
 				cursor: pointer;
+
+				text-align: center;
+				color: #fff;
+				font-size: 0.9em;
+				font-weight: 400;
+
+				background-color: #f1824c;
 
 				&:hover {
 					text-decoration: underline;
@@ -48,6 +51,7 @@
 		display: flex;
 		flex-direction: column;
 		padding: 0 10px;
+		font-weight: 400;
 
 		h3 {
 			margin: 0 0 15px 0;
@@ -206,6 +210,7 @@
 
 		label {
 			cursor: pointer;
+			font-weight: 400;
 		}
 	}
 
